fix: layout spacing

--- a/assets/css/buttons.css
+++ b/assets/css/buttons.css
@@ -40,8 +40,7 @@
 	transition: background 0.3s ease-in-out, color 0.3s ease-in-out;
 }
 
-.menu__item--buttons a:nth-child(2):hover,
-.menu__item--buttons a:nth-child(2):active {
+.menu__item--buttons a:nth-child(2):hover {
 	color: var(--primary-color);
 	background: var(--text-color);
 }
@@ -73,7 +72,8 @@
 
 	text-decoration: none;
 	color: var(--text-color);
-	transition: background 0.6s ease-in-out, outline 0.6s ease-in-out, transform 0.6s ease-in-out;
+	transition: background 0.6s ease-in-out, outline 0.6s ease-in-out,
+		transform 0.6s ease-in-out;
 }
 
 .button--gradient h3 {
@@ -129,4 +129,3 @@ header .button--gradient:hover {
 main .button--gradient:hover {
 	background-position: -30vmax;
 }
-
