--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,7 +11,10 @@ main section {
 	justify-content: center;
 	align-items: center;
 	gap: 4rem;
-	padding: 4rem 2rem;
+}
+
+main {
+	padding: 4rem;
 }
 
 .main__title {
@@ -89,7 +92,6 @@ main section {
 }
 
 section.previews {
-	padding: 2.4rem;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -98,7 +100,7 @@ section.previews {
 .previews__container {
 	padding: 1rem;
 	display: grid;
-	grid-template-columns: repeat(3, minmax(20vw, 23vw));
+	grid-template-columns: repeat(3, minmax(15vw, 20vw));
 	gap: 4rem;
 	justify-content: center;
 	align-items: center;
